# ManPageEditorQT

./: .gitignore  ChangeLog  Makefile.am  README.md  autogen.sh  configure.ac  configure.qt5.ac  remakesourcelist
ManPageEditorQT/: flagsandlibs  sources
ManPageEditorQT/app/: Makefile.am
ManPageEditorQT/resources/docs/: help.html  prefs.config  template.1
ManPageEditorQT/resources/icons/manpageedqticons/: index.theme
ManPageEditorQT/resources/man/: manpageeditorqt.1
ManPageEditorQT/resources/pixmaps/: ManPageEditorQT.desktop
ManPageEditorQT/src/: Callbacks.cpp  Callbacks.h  Globals.cpp  Globals.h  LFSTKPrefsClass.cpp  LFSTKPrefsClass.h  ManPageEditorQT.cpp  ManPageEditorQT.h  ManpageConvert.cpp  ManpageConvert.h  QT_AboutBox.cpp  QT_AboutBox.h  QT_FindClass.cpp  QT_FindClass.h  QT_ManpageExporter.cpp  QT_ManpageExporter.h  QT_SpellCheck.cpp  QT_SpellCheck.h  QT_menuitem.cpp  QT_menuitem.h  QT_notebook.cpp  QT_notebook.h  globals.cpp  globals.h  internet.h  main.cpp  prefsClass.cpp  prefsClass.h  prefsDefaultConfig.h  qtincs.h  runExternalProc.cpp  runExternalProc.h
PrivateDevFiles/: MakeManPageEditorQTAppImage
