#
#
AC_INIT([ManPageEditorQT],[0.2.0],[PROJ],[ManPageEditorQT])

AC_CONFIG_HEADERS([config.h])
AC_PROG_CXX
AC_PROG_CC
AM_INIT_AUTOMAKE

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

CXXFLAGS=-Wall
AC_SUBST(CXXFLAGS)

CFLAGS=-Wall
AC_SUBST(CFLAGS)

QT_MODULES="Qt6Gui >= 6.8.0"
PKG_CHECK_MODULES(QT, $QT_MODULES)
AC_SUBST(QT_CFLAGS)
AC_SUBST(QT_LIBS)

QTWIDGETS_MODULES="Qt6Widgets >= 6.8.0"
PKG_CHECK_MODULES(QTWIDGETS, $QTWIDGETS_MODULES)
AC_SUBST(QTWIDGETS_CFLAGS)
AC_SUBST(QTWIDGETS_LIBS)

AC_CONFIG_FILES(Makefile ManPageEditorQT/app/Makefile)
AC_OUTPUT